Añadida introducción y mapa de ocupación

--- a/index.html
+++ b/index.html
@@ -1,23 +1,77 @@
 <div id="app">
-  <span class="negrita">Nombre:</span> Sergio Hurtado Bravo
-  <br />
+  <div class="container">
+    <div class="header">
+      <span class="negrita">Nombre:</span> Sergio Hurtado Bravo
+    <br />
 
-  <span class="negrita">URL:</span>
+    <span class="negrita">URL:</span>
 
-  <a href="https://js-1whtwz.stackblitz.io" target="_blank">
-    js-1whtwz.stackblitz.io
-  </a>
+    <a href="https://js-1whtwz.stackblitz.io" target="_blank">
+      js-1whtwz.stackblitz.io
+    </a>
 
-  <br />
+    <br />
 
-  <span class="negrita">GitHub:</span>
+    <span class="negrita">GitHub:</span>
 
-  <a
-    href="https://github.com/sergiohdob/08MBID---Visualizacion-de-Datos"
-    target="_blank"
-  >
-    github.com/sergiohdob/08MBID---Visualizacion-de-Datos
-  </a>
+    <a
+      href="https://github.com/sergiohdob/08MBID---Visualizacion-de-Datos"
+      target="_blank"
+    >
+      github.com/sergiohdob/08MBID---Visualizacion-de-Datos
+    </a>
+    </div>
+    
+    <h1>Evolución del turismo en las costas andaluzas, 2016-2022</h1>
 
-  <h1>Visualización AG1</h1>
+    <h2>Introducción</h2>
+
+    <p>
+      Una firma hotelera que trabaja en el sur de la península, quiere conocer en detalles cómo ha evolucionado
+      la costa andaluza en los últimos años, especialmente, tras la crisis del Covid-19 y poder así aprovechar
+      las oportunidades de realizar campañas de marketing dirigidas a las zonas en las que más está creciendo el
+      turismo.
+    </p>
+
+    <h2>Objetivos</h2>
+
+    <p>
+      La gestión necesita contestar las siguientes preguntas:
+      <ul>
+        <li>¿Cuáles son las poblaciones costeras con mayor número de pernoctaciones?</li>
+        <li>¿Dónde existe un menor número de habitaciones pero existe una alta demanda?</li>
+        <li>¿Cuáles son los ingresos medios por habitación en las zonas costeras?</li>
+      </ul>
+    </p>
+
+    <h2>Análisis</h2>
+
+    <iframe
+      title="Grado de ocupación e ingresos por habitaciones"
+      aria-label="Mapa"
+      id="datawrapper-chart-1l9Ou"
+      src="https://datawrapper.dwcdn.net/1l9Ou/1/"
+      scrolling="no"
+      frameborder="0"
+      style="width: 0; min-width: 100% !important; border: none"
+      height="480"
+      data-external="1"
+    ></iframe>
+    <script type="text/javascript">
+      !(function () {
+        'use strict';
+        window.addEventListener('message', function (a) {
+          if (void 0 !== a.data['datawrapper-height']) {
+            var e = document.querySelectorAll('iframe');
+            for (var t in a.data['datawrapper-height'])
+              for (var r = 0; r < e.length; r++)
+                if (e[r].contentWindow === a.source) {
+                  var i = a.data['datawrapper-height'][t] + 'px';
+                  e[r].style.height = i;
+                }
+          }
+        });
+      })();
+    </script>
+  </div>
 </div>
