--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       >
         github.com/sergiohdob/08MBID---trabajo-practico
       </a>
+
+      <a
+      href="https://colab.research.google.com/drive/10PrxADkaU7nJ_En5uePvYnxEu0cJVBTU?usp=sharing"
+      target="_blank"
+      >
+      Jupyter Notebook de transformaciones - Google Colab
+      </a>
     </div>
     
     <h1>Evolución del turismo en las costas andaluzas, 2016-2022</h1>
@@ -124,7 +131,6 @@
     <ul>
       <li><a href="https://www.juntadeandalucia.es/institutodeestadisticaycartografia" target="_blank">IECA - Instituto de Estadística y Cartografía de Andalucía</a></li>
       <li><a href="https://www.ine.es/">INE - Instituto Nacional de Estadística</a></li>
-      <li><a href="https://colab.research.google.com/drive/10PrxADkaU7nJ_En5uePvYnxEu0cJVBTU?usp=sharing">Jupyter Notebook de transformaciones - Google Colab</a></li>
     </ul>
   </div>
 </div>
