Arreglado enlace a Google Colab

--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
         github.com/sergiohdob/08MBID---trabajo-practico
       </a>
 
+      <br />
+
+      <span class="bold">Jupyter Notebook:</span>
+
       <a
       href="https://colab.research.google.com/drive/10PrxADkaU7nJ_En5uePvYnxEu0cJVBTU?usp=sharing"
       target="_blank"
       >
-      Jupyter Notebook de transformaciones - Google Colab
+      Transformaciones - Google Colab
       </a>
     </div>
     
